# ProjectDarkErebus

./: .gitignore  CHANGELOG.md  README.md  build_table.py  compile_stats.py  compiled_stats_week01.csv  compiled_stats_week10.csv  compiled_stats_week11.csv  compiled_stats_week12.csv  compiled_stats_week15.csv  compiled_stats_week7.csv  final_matchups_week01.csv  final_matchups_week10.csv  final_matchups_week11.csv  final_matchups_week12.csv  final_matchups_week14.csv  final_matchups_week15.csv  final_matchups_week5.csv  final_matchups_week6.csv  final_matchups_week7.csv  final_matchups_week8.csv  final_matchups_week9.csv  final_predictions_week07.csv  final_predictions_week08.csv  final_predictions_week09.csv  final_predictions_week10.csv  final_predictions_week11.csv  final_predictions_week12.csv  final_predictions_week7.csv  games_week01.csv  games_week11.csv  games_week12.csv  games_week14.csv  games_week5.csv  games_week6.csv  games_week7.csv  games_week8.csv  get_stats.py  get_weeknum.py  get_winners.py  (+39 more)
Accuracy/: Week_07_Accuracy.xlsx  Week_08_Accuracy.xlsx  Week_09_Accuracy.xlsx  Week_10_Accuracy.xlsx
DE_Webserver/: webserver.py
DE_Webserver/templates/: about-our-bots.html  about-us.html  homepage-backup.html  homepage-layout.html  homepage.html  layout.html  predictions-chart.html  predictions.html
data/compiled_stats/: compiled_stats_week05.csv  compiled_stats_week06.csv  placeholder.txt
data/games/: games_week09.csv
data/lines/: nfl_lines_week06.csv
data/predictions/: final_predictions_week09.csv
flask-webserver/: webserver.py  website_functions.py
(+66 files in other folders)
