[tool.poetry]
name = "projectdarkerebus-1"
version = "0.1.0"
description = ""
authors = ["DaCryptoSpartan <tylerbelfield@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0.0"
bs4 = "^0.0.1"
flask = "^1.1"
mlxtend = "^0.17.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
